[project]
name = "anneal"
authors = [
    { name="Rohit Goswami", email="rgoswami@ieee.org" },
    { name="Ruhila S", email="ruhila@ieee.org" },
    { name="Amrita Goswami", email="amrita@hi.is" },
    { name="Sonaly Goswami", email="sonaly@iitk.ac.in" },
    { name="Debabrata Goswami", email="dgoswami@iitk.ac.in" },
]
maintainers = [
    { name="Rohit Goswami", email="rgoswami@ieee.org" },
    { name="Ruhila S", email="ruhila@ieee.org" },
    { name="Amrita Goswami", email="amrita@hi.is" },
]
description = "A package for various annealing and quenching techniques"
readme = "README.md"
license = { file = "LICENSE.txt" }
dynamic = [ "version" ]
keywords = ["optimization", "algorithms"]
requires-python = ">=3.10.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.3",
    "numpy>=1.24.1",
    "matplotlib>=3.6.3",
    "tqdm>=4.64.1",
    "probsamplers>=0.1.0",
    "eindir>=0.0.3",
]

[project.urls]
"Homepage" = "https://github.com/HaoZeke/anneal"
"Bug Tracker" = "https://github.com/HaoZeke/anneal/issues"

[project.scripts]
anneal = "anneal.cli.main:hello"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"
write_to = "_version.py"

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.2.1",
]
test = [
    "pytest>=7.2.1",
]
interactive = [
    "ipython>=8.9.0",
    "jupytext>=1.14.4",
]
docs = [
    "sphinx>=7.2.6",
    "furo>=2024.1.29",
    "sphinx-contributors>=0.2.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-autobuild>=2024.2.4",
    "sphinxcontrib-spelling>=8.0.0",
    "myst-parser>=2",
    "sphinx-autodoc2>=0.4.2",
]
plotter = [
    "pandas>=1.5.3",
    "matplotlib>=3.6.3",
]

[tool.pdm.scripts]
check_ruff  = "ruff ."
ruff_fix    = "ruff --fix --unsafe-fixes ."
ruff_format = "ruff format ."
lint        = { composite = [ "ruff_fix", "ruff_format" ] }
test        = "pytest --cov=anneal tests"
mkdoc = {composite = ["sphinx-build -b html docs/source docs/build/html"]}
